# susun-studio

./: .gitignore  ADR-0001-tech-stack.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  components.json  package.json  vite.config.js  vitest.config.ts
.github/workflows/: ci.yml  release.yml
crates/studio-daemon/: Cargo.toml
crates/studio-daemon/migrations/: 0001_initial.sql  0002_project_sources.sql  0003_plans.sql  0004_plans_drop_fk.sql  0005_engine_providers.sql  0006_jobs.sql  0007_job_error_codes.sql  0008_job_manifest.sql  0009_watch.sql  0010_runtime_profiles.sql  0011_runtime_ownership.sql  0012_runtime_transitions.sql  0013_runtime_action_audit.sql  0014_runtime_action_audit_artifact_actions.sql  0015_build_job_progress.sql
crates/studio-daemon/src/: action_audit.rs  action_plans.rs  archive_safety.rs  artifact_inventory.rs  auth.rs  backup.rs  config.rs  db.rs  error.rs  logging.rs  main.rs  plans_maintenance.rs  project_source.rs  restore.rs  state.rs  susun_integration.rs  test_support.rs
crates/studio-daemon/src/artifact_inventory/: tests.rs
crates/studio-daemon/src/backup/: tests.rs
crates/studio-daemon/src/jobs/: build_registry.rs  error_taxonomy.rs  maintenance.rs  mod.rs  registry.rs  tickets.rs
crates/studio-daemon/src/restore/: tests.rs
crates/studio-daemon/src/routes/: artifacts.rs  backup.rs  diagnostics.rs  engines.rs  health.rs  jobs.rs  mod.rs  observe.rs  plans.rs  projects.rs  runtime.rs  runtime_transitions.rs  service_actions.rs  settings.rs  watch.rs
crates/studio-daemon/src/runtime/: command.rs  endpoint_policy.rs  mod.rs  package_source.rs  provider.rs  tests.rs  transitions.rs  trust.rs  trusted_exec.rs  trusted_plans.rs  windows_docker_desktop.rs  windows_podman.rs
crates/studio-daemon/src/runtime/transitions/: tests.rs
crates/studio-daemon/src/watch/: maintenance.rs  mod.rs  registry.rs
crates/studio-windows-trust/: Cargo.toml
crates/studio-windows-trust/src/: authenticode.rs  elevation.rs  error.rs  ffi.rs  lib.rs  model.rs  msix.rs
docs/public/: README.md  beta-compatibility.md  beta-troubleshooting.md
scripts/: build-daemon-sidecar.mjs
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: backup.rs  daemon.rs  diagnostics.rs  lib.rs  main.rs  restore.rs
src/lib/: engine-identity.test.ts  engine-identity.ts  utils.test.ts  utils.ts
src/lib/artifacts/: capability.test.ts  capability.ts  fetch-error.test.ts  fetch-error.ts  mutation-state.test.ts  mutation-state.ts  scoped-detail.test.ts  scoped-detail.ts  scoped-fetch.test.ts  scoped-fetch.ts  workspace-state.test.ts  workspace-state.ts
src/lib/components/: active-engine-strip.svelte  app-sidebar.svelte  artifacts-build-cache-tab.svelte  artifacts-builds-tab.svelte  artifacts-containers-tab.svelte  artifacts-images-tab.svelte  artifacts-page.svelte  artifacts-registry-tab.svelte  artifacts-state-banner.svelte  beta-onboarding-panel.svelte  copy-dialog.svelte  engine-status-card.svelte  events-viewer.svelte  exec-dialog.svelte  hero-panel.svelte  image-remove-dialog.svelte  image-tag-dialog.svelte  import-project-dialog.svelte  job-panel.svelte  jobs-page.svelte  logs-viewer.svelte  planning-panel.svelte  project-detail.svelte  project-workspace.svelte  projects-table.svelte  prune-dialog.svelte  remove-project-dialog.svelte  run-dialog.svelte  runtime-action-audit.svelte  runtime-data-scope-dialog.svelte  runtime-migration-dialog.svelte  runtime-page.svelte  runtime-resource-panel.svelte  scope-prune-control.svelte  service-output.svelte  services-panel.svelte  settings-page.svelte  settings-strip.svelte  status-badge.svelte  top-bar.svelte  (+1 more)
src/lib/daemon/: client.ts  daemon-state.svelte.ts
src/lib/jobs/: build-job.test.ts  build-job.ts
src/lib/tauri/: daemon-connection.ts  updater.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte  layout.css
