[workspace]
members = ["crates/studio-daemon", "crates/studio-windows-trust", "src-tauri"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["wihlarkop"]
license = "MIT"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
expect_used = "deny"
panic = "deny"
unwrap_used = "deny"
