[package]
name = "susun-studio"
version.workspace = true
description = "Susun Studio desktop client"
authors.workspace = true
license.workspace = true
edition.workspace = true

[lib]
# The `_lib` suffix keeps the library name distinct from the binary on Windows.
name = "susun_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.11.4", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2.5.4"
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
tokio = { version = "1", features = ["time"] }
