[package]
name = "susun-studio-daemon"
version.workspace = true
description = "Local daemon for Susun Studio"
authors.workspace = true
license.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
axum = "0.8.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
susun = { path = "../../../susun/crates/susun", features = ["bollard", "watch"] }
susun-engine-bollard = { path = "../../../susun/crates/susun-engine-bollard" }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = [
  "macros",
  "net",
  "process",
  "rt-multi-thread",
  "signal",
  "sync",
] }
tokio-stream = { version = "0.1", features = ["sync"] }
dashmap = "6"
uuid = { version = "1", features = ["v4"] }
subtle = "2"
tower-http = { version = "0.7.0", features = ["cors"] }
turso = { version = "0.7.0-pre.14", default-features = false }
futures-util = "0.3.32"
tar = "0.4.46"
indexmap = "2.14.0"
