[package]
name = "studio-windows-trust"
version.workspace = true
description = "Windows-only executable trust verification (Authenticode + MSIX package identity) for Susun Studio"
authors.workspace = true
license.workspace = true
edition.workspace = true

# This crate deliberately does NOT inherit the workspace `unsafe_code = "forbid"`
# lint: it is the one place allowed to hold Win32/WinRT FFI. Unsafe is denied by
# default here and narrowly re-enabled only inside the documented `ffi` modules.
# The rest of the clippy discipline is kept in step with the workspace.
[lints.rust]
unsafe_code = "deny"

[lints.clippy]
expect_used = "deny"
panic = "deny"
unwrap_used = "deny"

[dependencies]
thiserror = "2.0.18"

# Win32 FFI, Windows-only. Features are kept to exactly what the Authenticode
# and (later) MSIX verification calls need — no umbrella features.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "ApplicationModel",
  "Foundation_Collections",
  "Management_Deployment",
  "Win32_Foundation",
  "Win32_Security_Cryptography",
  "Win32_Security_Cryptography_Catalog",
  "Win32_Security_WinTrust",
  "Win32_Storage_FileSystem",
  "Win32_System_Com",
  "Win32_System_Threading",
  "Win32_System_JobObjects",
  "Win32_System_Registry",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }
